--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,72 @@
 
 tsconfig.json
 tsup.config.ts
+
+# exmaple project gitignore
+
+# OSX
+#
+/example/.DS_Store
+
+# Xcode
+#
+/example/build/
+/example/*.pbxuser
+/example/!default.pbxuser
+/example/*.mode1v3
+/example/!default.mode1v3
+/example/*.mode2v3
+/example/!default.mode2v3
+/example/*.perspectivev3
+/example/!default.perspectivev3
+/example/xcuserdata
+/example/*.xccheckout
+/example/*.moved-aside
+/example/DerivedData
+/example/*.hmap
+/example/*.ipa
+/example/*.xcuserstate
+/example/**/.xcode.env.local
+
+
+/example/build/
+/example/.idea
+/example/.gradle
+/example/local.properties
+/example/*.iml
+/example/*.hprof
+/example/.cxx/
+/example/*.keystore
+/example/!debug.keystore
+
+/example/# node.js
+
+/example/node_modules/
+/example/npm-debug.log
+/example/yarn-error.log
+
+
+/example/**/fastlane/report.xml
+/example/**/fastlane/Preview.html
+/example/**/fastlane/screenshots
+
+
+/example/*.jsbundle
+
+
+/example/**/Pods/
+/example/vendor/bundle/
+
+
+/example/.metro-health-check*
+
+
+/example/coverage
+
+
+/example/.yarn/*
+/example/!.yarn/patches
+/example/!.yarn/plugins
+/example/!.yarn/releases
+/example/!.yarn/sdks
+/example/!.yarn/versions
