--- a/package.json
+++ b/package.json
@@ -26,21 +26,32 @@
   ],
   "scripts": {
     "build": "rm -rf dist && tsup",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "link": "npm link",
+    "lint": "eslint --ignore-pattern dist ./src",
+    "lint:fix": "eslint --fix --ext .ts --ignore-pattern dist ./src"
   },
   "engines": {
-    "node": ">=14"
+    "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
     "react-native": "^0.74.x"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "tsup": "^8.1.0",
+    "@eslint/js": "^9.7.0",
     "@types/react": "^18.2.6",
+    "eslint": "9.x",
+    "globals": "^15.8.0",
     "react-native": "^0.74.3",
-    "typescript": "^5.5.3"
+    "tsup": "^8.1.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.1"
+  },
+  "resolutions": {
+    "strip-ansi": "6.0.1",
+    "string-width": "4.2.2",
+    "wrap-ansi": "7.0.0"
   }
 }
