--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,7 @@
     "outDir": "dist",
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
+  // "extends": "@react-native/typescript-config/tsconfig.json"
 }
