--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "rm -rf dist && tsup",
     "prepublishOnly": "npm run build",
     "link": "npm link",
-    "lint": "eslint --ignore-pattern dist ./src",
+    "lint": "eslint --ignore-pattern dist ",
     "lint:fix": "eslint --fix --ext .ts --ignore-pattern dist ./src"
   },
   "engines": {
