--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: 18.x
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --force
 
       - name: ESLint
         run: npm run lint
