feat: add types declaration

--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "jsxBracketSameLine": false
   },
   "peerDependencies": {
+    "@types/react": "*",
+    "@types/react-native": "*",
     "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-native": "^0.74.x"
   },
   "devDependencies": {
